# techful-rust-base

./: .gitignore  Cargo.toml  Makefile.toml  README.md  cargo-generate.toml
src/: main.rs
tests/: proptest.rs  sample_inputs.rs
