# -*- coding:utf-8-unix -*-

[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# usable crate list with cargo-equip

#fixedbitset = "0.4.0"
#lazy_static = "1.4.0"
#maplit = "1.0.2"
#memoise = "0.3.2"
#multimap = "0.8.3"
#permutohedron = "0.2.4"
proconio = { version = "0.4.3", features = ["derive"] }
#rustc-hash = "1.1.0"
#smallvec = "1.6.1"
#strsim = "0.10.0"
#whiteread = "0.5.0"

[dev-dependencies]
cli_test_dir = "0.1"
