# -*- coding:utf-8-unix -*-

[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2015"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
proconio_for_1_39_0 = { git = "https://github.com/naokisz/proconio-rs-for-1.39.0.git", branch = "main" }

[dev-dependencies]
#cli_test_dir = "0.1"
#proptest = "1.0.0"
